--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "parcel src/index.html -p 1234",
-    "build": "parcel build src/index.html --public-url /  --out-dir /root/www/memorizing --no-source-maps",
-    "relay": "relay-compiler --src ./src --schema ./schema.graphql --extensions js jsx"
+    "build": "parcel build src/index.html --public-url /memorizing  --out-dir dist --no-source-maps"
   },
   "repository": {
     "type": "git",
@@ -29,6 +28,7 @@
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@nivo/bar": "^0.63.0",
     "@types/react": "^16.8.6",
     "bizcharts": "^4.0.14",
     "dayjs": "^1.9.3",
