--- a/package.json
+++ b/package.json
@@ -33,8 +33,13 @@
     "bizcharts": "^4.0.14",
     "dayjs": "^1.9.3",
     "notistack": "^1.0.1",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-router-dom": "^5.2.0"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-markdown": "^5.0.1",
+    "react-quill": "^1.3.5",
+    "react-router-dom": "^5.2.0",
+    "react-spring": "^8.0.27",
+    "rich-markdown-editor": "^11.0.2",
+    "styled-components": "^5.1.0"
   }
 }
